Added more sections and confirmation form

--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -7,11 +7,11 @@ import './hero.css'
 <section class="hero">
 	<section class="hero_picture">
 		<img class="feature_image" src="https://live.staticflickr.com/65535/52818800629_05a9a789c6_k_d.jpg" alt="">
-		<h1>Arnulfo & Caissa</h1>
+		<h1 class="container">Arnulfo & Caissa</h1>
 	</section>
 	<section class="hero_date container">
 		<section class="hero_date_text">
-			<p class="small">Apúntale allí.</p>
+			<p class="small">Apúntele bien.</p>
 			<p class="save_the_date">Domingo <span class="text_bold">19</span> <span class="text_bold">Noviembre</span></p>
 		</section>
 		<picture class="hero_date_img">
