--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -1,4 +1,3 @@
-
 .feature_image{
 	height: 50dvh;
 	width: 100%;
@@ -8,12 +7,6 @@
 	margin-top: 0;
 	object-position: 50% 40%;
 	background-color: #33CCCC;
-}
-
-@media screen and (max-width: 666px) {
-	.feature_image {
-		object-position: 50% 50%;
-	}
 }
 
 .hero_picture {
@@ -28,6 +21,16 @@
 	align-self: center;
 	color: #d99e08;
 	text-shadow: black 10px 8px 16px;
+	margin: 0;
+}
+
+@media screen and (max-width: 666px) {
+	.feature_image {
+		object-position: 50% 50%;
+	}
+	.hero_picture h1 {
+		margin-top: 4rem;
+	}
 }
 
 .hero_date {
@@ -39,7 +42,7 @@
 						 'TIMER TIMER';
 	justify-content: center;
 	align-items: center;
-	gap: 0 1rem;
+	gap: 0 4rem;
 }
 
 .hero_gif {
