--- a/src/components/Reception/Reception.astro
+++ b/src/components/Reception/Reception.astro
@@ -11,7 +11,7 @@ import './reception.css'
 		<p>Tampico, Tamaulipas, MX</p>
 	</address>
 	<section class="reception_map">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d238.05345282086859!2d-97.87084019557194!3d22.239250027184994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d7f9ffc33e4a0b%3A0x66f32434ef795053!2sCualti%20Centro%20de%20Estudios%20Universitarios!5e0!3m2!1ses-419!2sus!4v1684033099452!5m2!1ses-419!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+		<iframe src="https://www.google.com/maps/d/embed?mid=11y-hacTS-QmomzLW-Uo49qwlG45eFEg&ehbc=2E312F&z=15" width="100%" height="480"></iframe>
 	</section>
 	<section class="reception_info">
 		<p class="small">El lugar es en salón interior y cuenta con aire acondicionado. Cuenta también con estacionamiento disponible para nuestros invitados. </p>
