--- a/src/pages/types.astro
+++ b/src/pages/types.astro
@@ -3,19 +3,16 @@ import './reset.css'
 import './index.css'
 
 import { GoogleFontsOptimizer } from "astro-google-fonts-optimizer";
+import Typography from '../components/Typography/Typography.astro';
 import Hero from '../components/Hero/Hero.astro';
-import Reception from '../components/Reception/Reception.astro';
-import Story from '../components/Story/Story.astro';
-import Gallery from '../components/Gallery/Gallery.astro';
 import Footer from '../components/Footer/Footer.astro';
-import Confirmation from '../components/Confirmation/Confirmation.astro';
-import GiftList from '../components/GiftList/GiftList.astro';
+
 ---
 
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Arnulfo y Caissa</title>
@@ -27,11 +24,7 @@ import GiftList from '../components/GiftList/GiftList.astro';
 		<section>
 			<Hero />
 
-			<Reception />
-			<Story />
-			<Confirmation />
-			<GiftList />
-			<Gallery />
+			<Typography />
 
 			<Footer />
 		</section>
