Fixed some visual bugs and adder more information

--- a/src/components/GiftList/GiftList.astro
+++ b/src/components/GiftList/GiftList.astro
@@ -8,38 +8,60 @@ import './giftlist.css'
 	<section class="giftlist_description">
 		<p>Contar con su presencia este día tan especial sería para nosotros el mejor regalo. Pero si además desean regalarnos algo, les dejamos estas sugerencias:</p>
 	</section>
-	<section class="giftlist_columns">
-		<section class="giftlist_columns__column">
-			<h3>Certificado de regalo de Amazon </h3>
-			<p> Puedes crear el certificado de regalo por la cantidad que gustes. </p>
-			<a class="button" href="www.amazon.com">Crear certificado de regalo</a>
-		</section>
-		<section class="giftlist_columns__column">
+	<section class="giftlist_amazon">
+		<h3>Certificado de regalo de Amazon </h3>
+		<p> Puedes crear el certificado de regalo por la cantidad que gustes. </p>
+		<a class="button" href="www.amazon.com">Crear certificado de regalo</a>
+	</section>
+	<section class="giftlist_cardTransfer">
+		<section class="giftlist_cardTransfer__information">
 			<h3>Apoyo en efectivo</h3>
-			<p>Si lo prefieres, puedes darnos un apoyo en efectivo haciendo una transferencia a esta cuenta:</p>
-			<table class="table">
-				<thead>
-					<tr>
-						<th>Banco</th>
-						<th>Santander</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>Nombre</td>
-						<td>Caissa Palomino</td>
-					</tr>
-					<tr>
-						<td>Cuenta CLABE</td>
-						<td>002813700364334402</td>
-					</tr>
-					<tr>
-						<td>Número de tarjeta</td>
-						<td>5204 1672 6608 1199</td>
-					</tr>
-				</tbody>
-			</table>
+			<p>Si lo prefieres, puedes darnos un apoyo en efectivo haciendo una transferencia a una de estas cuentas:</p>
 		</section>
+		<table class="table table_caissa">
+			<thead>
+				<tr>
+					<th>Nombre</th>
+					<th>Caissa Palomino</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Banco</td>
+					<td>Santander</td>
+				</tr>
+				<tr>
+					<td>Cuenta CLABE</td>
+					<td>002813700364334402</td>
+				</tr>
+				<tr>
+					<td>Número de tarjeta</td>
+					<td>5204 1672 6608 1199</td>
+				</tr>
+			</tbody>
+		</table>
+		<table class="table table_arnulfo">
+			<thead>
+				<tr>
+					<th>Nombre</th>
+					<th>Arnulfo Loredo</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Banco</td>
+					<td>Citibanamex</td>
+				</tr>
+				<tr>
+					<td>Cuenta CLABE</td>
+					<td>002813700364334402</td>
+				</tr>
+				<tr>
+					<td>Número de tarjeta</td>
+					<td>5204 1672 6608 1199</td>
+				</tr>
+			</tbody>
+		</table>
 	</section>
 	
 </section>
