--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -14,9 +14,9 @@ import './hero.css'
 			<p class="small">Apúntele bien.</p>
 			<p class="save_the_date">Domingo <span class="text_bold">19</span> <span class="text_bold">Noviembre</span></p>
 		</section>
-		<picture class="hero_date_img">
-			<img class="hero_gif" src="/images/ring.gif" alt="">
-			<img class="hero_image" src="https://live.staticflickr.com/65535/52815852952_65c9fc4d7c_w_d.jpg" alt="">
+		<picture class="hero_image">
+			<img class="hero_image__front" src="/images/ring.gif" alt="">
+			<img class="hero_image__back" src="https://live.staticflickr.com/65535/52815852952_65c9fc4d7c_w_d.jpg" alt="">
 		</picture>
 		<Timer client:only="react" />
 	</section>
