--- a/src/components/Confirmation/Confirmation.astro
+++ b/src/components/Confirmation/Confirmation.astro
@@ -11,4 +11,7 @@ import './confirmation.css'
 	<section class="confirmation_image">
 		<img class="confirmation_gif" src="/images/wedding-date.gif" alt="">
 	</section>
+	<section class="confirmation_information">
+		<p class="small">La confirmación se enviará por WhatsApp a la organizadora del evento: Keren Rivera.</p>
+	</section>
 </section>
