--- a/src/components/Confirmation/confirmation.css
+++ b/src/components/Confirmation/confirmation.css
@@ -50,10 +50,10 @@
 }
 
 .form_section__error {
-	background-color: coral;
+	background-color: #ffe5e5;
 	padding: 0.2rem 1rem;
 	border-radius: 0.1rem;
-	color: white;
+	color: #ac0000;
 	font-style: italic;
 }
 
