--- a/src/components/GiftList/giftlist.css
+++ b/src/components/GiftList/giftlist.css
@@ -2,13 +2,31 @@
 	margin: 4rem auto 8rem auto;
 }
 
-.giftlist_columns {
+.giftlist_cardTransfer {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	gap: 4rem;
+	grid-template-rows: auto;
+	grid-template-areas: 'INFO INFO'
+						 'T_CAISSA T_ARNULFO';
+	gap: 1rem;
 }
 
-.giftlist_columns__column {
+.giftlist_cardTransfer__information {
+	grid-area: INFO;
+	display: flex;
+	flex-direction: column;
+	gap: 0.5rem;
+}
+
+.table_caissa {
+	grid-area: T_CAISSA;
+}
+
+.table_arnulfo {
+	grid-area: T_ARNULFO;
+}
+
+.giftlist_cardTransfer__table {
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
@@ -16,11 +34,24 @@
 }
 
 .giftlist_description {
-	margin-bottom: 2rem;
+	margin-bottom: 3rem;
+}
+
+.giftlist_amazon {
+	max-width: 500px;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	gap: 0.5rem;
+	margin: 0 auto;
+	margin-bottom: 3rem;
 }
 
 @media screen and (max-width: 800px) {
-	.giftlist_columns {
+	.giftlist_cardTransfer {
 		grid-template-columns: repeat(1, 1fr);
+		grid-template-areas: 'INFO'
+							 'T_CAISSA'
+							 'T_ARNULFO';
 	}
 }
