--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -45,7 +45,7 @@
 	gap: 0 4rem;
 }
 
-.hero_gif {
+.hero_image__front {
 	height: 69%;
 	border-radius: 1rem;
 }
@@ -69,13 +69,13 @@
 	gap: 0.1rem;
 }
 
-.hero_date_img {
+.hero_image {
 	grid-area: GIF;
 	height: 40dvh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-    justify-self: start;
+    justify-self: center;
 }
 
 .hero_date_timer {
@@ -91,25 +91,71 @@
 
 /* 3D Flip animation */
 
-.hero_date_img {
+.hero_image {
 	position: relative;
 	left: 1rem;
 	transform-style: preserve-3d;
 	transition: all 1.0s linear;
 }
 
-.hero_date_img:hover {
+.hero_image:hover {
 	transform: rotateY(180deg);
 }
 
-.hero_gif {
+.hero_image:hover .hero_image__back {
+	opacity: 1;
+}
+
+.hero_image__front {
 	position: absolute;
 	backface-visibility: hidden;
 	z-index: 1;
 } 
 
-.hero_image {
+.hero_image__back {
+	opacity: 0;
+	transition: opacity 1s linear;
 	border-radius: 1rem;
 	height: 69%;
 	transform: rotateY(180deg);
+}
+
+@media screen and (max-width: 666px) {
+	.hero_date {
+		gap: 0 1rem;
+	}
+
+	.hero_image__front, .hero_image__back {
+		height: 42%;
+	}
+}
+
+@media screen and (max-width: 375px) {
+	.hero_date {
+		display: grid;
+		grid-template-columns: repeat(1, 1fr);
+		grid-template-rows: repeat(3, auto);
+		grid-template-areas: 'GIF'
+							 'TEXT'
+							 'TIMER';
+		gap: 0.4rem;
+	}
+
+	.hero_image__front, .hero_image__back {
+		height: 69%;
+	}
+
+	.hero_image, .hero_date_text {
+		justify-self: center;
+	}
+
+	.hero_image {
+		height: 20dvh;
+	}
+	.hero_date_text {
+		height: 10dvh;
+	}
+	.hero_date_timer {
+		height: 20dvh;
+	}
 }
