--- a/src/components/Reception/Reception.astro
+++ b/src/components/Reception/Reception.astro
@@ -6,7 +6,7 @@ import './reception.css'
 <HeadingTitles heading="Recepción" />
 <section class="reception container">
 	<address class="reception_address">
-		<h3>Salon Amaia</h3>
+		<h3>Salón Amaia</h3>
 		<p>Nogal 101, Aguila, CP 89320</p>
 		<p>Tampico, Tamaulipas, MX</p>
 	</address>
