--- a/src/components/Story/Story.astro
+++ b/src/components/Story/Story.astro
@@ -16,7 +16,7 @@ import './story.css'
 
 		<section class="card">
 			<picture>
-				<img class="story_gif" src="/images/ring.gif" alt="">
+				<img class="story_gif" src="/images/ring-hand.gif" alt="">
 			</picture>
 			<h3>Nuestro compromiso</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque tincidunt metus eget lorem ultrices dictum. Quisque in quam lectus.</p>
@@ -24,7 +24,7 @@ import './story.css'
 
 		<section class="card">
 			<picture>
-				<img class="story_gif" src="/images/marriage-certificate.gif" alt="">
+				<img class="story_gif" src="/images/marriage.gif" alt="">
 			</picture>
 			<h3>Nuestra boda</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque tincidunt metus eget lorem ultrices dictum. Quisque in quam lectus.</p>
