--- a/src/components/Gallery/gallery.css
+++ b/src/components/Gallery/gallery.css
@@ -8,12 +8,26 @@
 
 .gallery_image {
 	max-width: 100%;
-	aspect-ratio: 2/2.4;
+	aspect-ratio: 1/1;
 	object-fit:cover;
+	height: 400px;
 }
 
 @media screen and (max-width: 666px) {
 	.gallery_massonry {
 		grid-template-columns: repeat(2, 1fr);
 	}
+}
+
+@media screen and (max-width: 400px) {
+	.gallery_massonry {
+		grid-template-columns: repeat(1, 1fr);
+	}
+}
+
+.gallery_link {
+	display: flex;
+	justify-content: stretch;
+	align-content: stretch;
+	align-items: stretch;
 }
