--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,6 +20,14 @@ import GiftList from '../components/GiftList/GiftList.astro';
 		<meta name="generator" content={Astro.generator} />
 		<title>Arnulfo y Caissa</title>
 
+		<!-- OPEN GRAPH / LINK PREVIEW -->
+
+		<meta property="og:title" content="Arnulfo y Caissa" />
+		<meta property="og:description" content="!Estás invitado a nuestra boda!" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://arnulfoycaissa.com" />
+		<meta property="og:image" content="https://live.staticflickr.com/65535/52818800629_05a9a789c6_k_d.jpg" />
+
 		<GoogleFontsOptimizer url="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap">
     	</GoogleFontsOptimizer>
 	</head>
