Performance improvements with videos instead of gifs

--- a/src/components/Confirmation/Confirmation.astro
+++ b/src/components/Confirmation/Confirmation.astro
@@ -9,7 +9,8 @@ import './confirmation.css'
 <section class="confirmation container">
 	<ConfirmationForm client:only="react"/>
 	<section class="confirmation_image">
-		<img class="confirmation_gif" src="/images/wedding-date.gif" alt="">
+		<!-- <img class="confirmation_gif" src="/images/wedding-date.gif" alt=""> -->
+		<video class="confirmation_gif" src="/videos/wedding-date.mp4" autoplay loop muted></video>
 	</section>
 	<section class="confirmation_information">
 		<p class="small">La confirmación se enviará por WhatsApp a la organizadora del evento: Keren Rivera.</p>
