--- a/src/components/Story/Story.astro
+++ b/src/components/Story/Story.astro
@@ -8,7 +8,8 @@ import './story.css'
 	<article class="story_cards">
 		<section class="card">
 			<picture>
-				<img class="story_gif" src="/images/tudor.gif" alt="">
+				<!-- <img class="story_gif" src="/images/tudor.gif" alt=""> -->
+				<video class="story_gif" src="/videos/tudor.mp4" autoplay loop muted></video>
 			</picture>
 			<h3>Nuestro noviazgo</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque tincidunt metus eget lorem ultrices dictum. Quisque in quam lectus.</p>
@@ -16,7 +17,8 @@ import './story.css'
 
 		<section class="card">
 			<picture>
-				<img class="story_gif" src="/images/ring-hand.gif" alt="">
+				<!-- <img class="story_gif" src="/images/ring-hand.gif" alt=""> -->
+				<video class="story_gif" src="/videos/ring-hand.mp4" autoplay loop muted></video>
 			</picture>
 			<h3>Nuestro compromiso</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque tincidunt metus eget lorem ultrices dictum. Quisque in quam lectus.</p>
@@ -24,7 +26,8 @@ import './story.css'
 
 		<section class="card">
 			<picture>
-				<img class="story_gif" src="/images/marriage.gif" alt="">
+				<!-- <img class="story_gif" src="/images/marriage.gif" alt=""> -->
+				<video class="story_gif" src="/videos/marriage.mp4" autoplay loop muted></video>
 			</picture>
 			<h3>Nuestra boda</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque tincidunt metus eget lorem ultrices dictum. Quisque in quam lectus.</p>
