--- a/src/components/Gallery/Gallery.astro
+++ b/src/components/Gallery/Gallery.astro
@@ -10,51 +10,51 @@ import './gallery.css'
 	<picture class="gallery_massonry" id="my-gallery">
 		<a 
 			class="gallery_link" 
-			href="https://live.staticflickr.com/65535/52815850012_737ef806c9_d.jpg" 
+			href="https://live.staticflickr.com/65535/52815850012_737ef806c9_b_d.jpg"
 			target="_blank" 
 			data-pswp-width="1669" 
 			data-pswp-height="2500" >
-			<img class="gallery_image" src="https://live.staticflickr.com/65535/52815850012_737ef806c9_d.jpg" alt="">
+			<img class="gallery_image" src="https://live.staticflickr.com/65535/52815850012_737ef806c9_w_d.jpg" alt="" loading="lazy">
 		</a>
 		<a 
 			class="gallery_link" 
-			href="https://live.staticflickr.com/65535/52818800629_da532c0472_d.jpg" 
+			href="https://live.staticflickr.com/65535/52818800629_da532c0472_b_d.jpg"
 			target="_blank" 
 			data-pswp-width="1669" 
 			data-pswp-height="2500" >
-			<img class="gallery_image" src="https://live.staticflickr.com/65535/52818800629_da532c0472_d.jpg" alt="">
+			<img class="gallery_image" src="https://live.staticflickr.com/65535/52818800629_da532c0472_w_d.jpg" alt="" loading="lazy">
 		</a>
 		<a 
 			class="gallery_link" 
-			href="https://live.staticflickr.com/65535/52816819515_210d1136d1_d.jpg" 
+			href="https://live.staticflickr.com/65535/52816819515_210d1136d1_b_d.jpg"
 			target="_blank" 
 			data-pswp-width="1669" 
 			data-pswp-height="2500" >
-			<img class="gallery_image" src="https://live.staticflickr.com/65535/52816819515_210d1136d1_d.jpg" alt="">
+			<img class="gallery_image" src="https://live.staticflickr.com/65535/52816819515_210d1136d1_w_d.jpg" alt="" loading="lazy">
 		</a>
 		<a 
 			class="gallery_link" 
-			href="https://live.staticflickr.com/65535/52815852952_65c9fc4d7c_d.jpg" 
+			href="https://live.staticflickr.com/65535/52815852952_65c9fc4d7c_b_d.jpg"
 			target="_blank" 
 			data-pswp-width="1669" 
 			data-pswp-height="2500" >
-			<img class="gallery_image" src="https://live.staticflickr.com/65535/52815852952_65c9fc4d7c_d.jpg" alt="">
+			<img class="gallery_image" src="https://live.staticflickr.com/65535/52815852952_65c9fc4d7c_w_d.jpg" alt="" loading="lazy">
 		</a>
 		<a 
 			class="gallery_link" 
-			href="https://live.staticflickr.com/65535/52816860523_0718bdaf61_d.jpg" 
+			href="https://live.staticflickr.com/65535/52816860523_0718bdaf61_b_d.jpg"
 			target="_blank" 
 			data-pswp-width="1669" 
 			data-pswp-height="2500" >
-			<img class="gallery_image" src="https://live.staticflickr.com/65535/52816860523_0718bdaf61_d.jpg" alt="">
+			<img class="gallery_image" src="https://live.staticflickr.com/65535/52816860523_0718bdaf61_w_d.jpg" alt="" loading="lazy">
 		</a>
 		<a 
 			class="gallery_link" 
-			href="https://live.staticflickr.com/65535/52816602464_24ea5cbf74_d.jpg" 
+			href="https://live.staticflickr.com/65535/52816602464_24ea5cbf74_b_d.jpg"
 			target="_blank" 
 			data-pswp-width="1669" 
 			data-pswp-height="2500" >
-			<img class="gallery_image" src="https://live.staticflickr.com/65535/52816602464_24ea5cbf74_d.jpg" alt="">
+			<img class="gallery_image" src="https://live.staticflickr.com/65535/52816602464_24ea5cbf74_w_d.jpg" alt="" loading="lazy">
 		</a>
 	</picture>
 </section>
