Updated copy for all sections.

--- a/src/components/GiftList/GiftList.astro
+++ b/src/components/GiftList/GiftList.astro
@@ -22,7 +22,7 @@ import './giftlist.css'
 			<thead>
 				<tr>
 					<th>Nombre</th>
-					<th>Caissa Palomino</th>
+					<th>Caissa Giselle Palomino Galván</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -32,11 +32,11 @@ import './giftlist.css'
 				</tr>
 				<tr>
 					<td>Cuenta CLABE</td>
-					<td>002813700364334402</td>
+					<td>014813606049539245</td>
 				</tr>
 				<tr>
 					<td>Número de tarjeta</td>
-					<td>5204 1672 6608 1199</td>
+					<td>5579 0701 0429 4510</td>
 				</tr>
 			</tbody>
 		</table>
@@ -44,7 +44,7 @@ import './giftlist.css'
 			<thead>
 				<tr>
 					<th>Nombre</th>
-					<th>Arnulfo Loredo</th>
+					<th>Arnulfo Daniel Loredo Gallardo</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -54,11 +54,11 @@ import './giftlist.css'
 				</tr>
 				<tr>
 					<td>Cuenta CLABE</td>
-					<td>002813700364334402</td>
+					<td>002580701003805346</td>
 				</tr>
 				<tr>
 					<td>Número de tarjeta</td>
-					<td>5204 1672 6608 1199</td>
+					<td>5204 1654 3339 4693</td>
 				</tr>
 			</tbody>
 		</table>
