--- a/src/components/Story/Story.astro
+++ b/src/components/Story/Story.astro
@@ -12,7 +12,7 @@ import './story.css'
 				<video class="story_gif" src="/videos/tudor.mp4" autoplay loop muted></video>
 			</picture>
 			<h3>Nuestro noviazgo</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque tincidunt metus eget lorem ultrices dictum. Quisque in quam lectus.</p>
+			<p>Nos conocimos en el 2014 en una clase de fotografía de la universidad, unos años después, en el 2019, comenzamos nuestra relación.</p>
 		</section>
 
 		<section class="card">
@@ -21,7 +21,7 @@ import './story.css'
 				<video class="story_gif" src="/videos/ring-hand.mp4" autoplay loop muted></video>
 			</picture>
 			<h3>Nuestro compromiso</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque tincidunt metus eget lorem ultrices dictum. Quisque in quam lectus.</p>
+			<p>En el 2022 decidimos dar el siguiente paso, y durante un viaje por los paisajes y cascadas de Chiapas nos comprometimos. </p>
 		</section>
 
 		<section class="card">
@@ -30,7 +30,12 @@ import './story.css'
 				<video class="story_gif" src="/videos/marriage.mp4" autoplay loop muted></video>
 			</picture>
 			<h3>Nuestra boda</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque tincidunt metus eget lorem ultrices dictum. Quisque in quam lectus.</p>
+			<p>Y ahora el 19 de Noviembre del 2023 con la bendición de nuestros padres, nos daremos el Sí definitivo. Nos encantaría que formes parte de este momento que seguirá escribiendo nuestra historia.</p>
 		</section>
+	</article>
+	<article>
+		<p>
+			
+		</p>
 	</article>
 </section>
