--- a/src/components/Story/story.css
+++ b/src/components/Story/story.css
@@ -1,6 +1,6 @@
 .story_cards {
-	display: flex;
-	flex-direction: row;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
 	gap: 2.1rem;
 	margin: 4rem 0 8rem 0;
 }
@@ -13,7 +13,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 0.8rem;
-	justify-content: center;
+	justify-content: flex-start;
 	align-content: center;
 }
 
@@ -23,7 +23,7 @@
 
 @media screen and (max-width: 666px) {
 	.story_cards {
-		flex-direction: column;
+		grid-template-columns: repeat(1, 1fr);
 		gap: 2rem;
 	}
 
