--- a/src/components/GiftList/GiftList.astro
+++ b/src/components/GiftList/GiftList.astro
@@ -11,7 +11,7 @@ import './giftlist.css'
 	<section class="giftlist_amazon">
 		<h3>Certificado de regalo de Amazon </h3>
 		<p> Puedes crear el certificado de regalo por la cantidad que gustes. </p>
-		<a class="button" href="www.amazon.com">Crear certificado de regalo</a>
+		<a class="button" href="https://www.amazon.com/wedding/share/arnulfoycaissa">Crear certificado de regalo</a>
 	</section>
 	<section class="giftlist_cardTransfer">
 		<section class="giftlist_cardTransfer__information">
