Updated links and texts

--- a/src/components/GiftList/GiftList.astro
+++ b/src/components/GiftList/GiftList.astro
@@ -9,14 +9,15 @@ import './giftlist.css'
 		<p>Contar con su presencia este día tan especial sería para nosotros el mejor regalo. Pero si además desean regalarnos algo, les dejamos estas sugerencias:</p>
 	</section>
 	<section class="giftlist_amazon">
-		<h3>Certificado de regalo de Amazon </h3>
-		<p> Puedes crear el certificado de regalo por la cantidad que gustes. </p>
-		<a class="button" href="https://www.amazon.com/wedding/share/arnulfoycaissa">Crear certificado de regalo</a>
+		<h3>Mesa de Regalos de Amazon</h3>
+		<p>Puedes elegir un regalo de nuestra lista o crear un certificado de regalo por la cantidad que gustes. La mesa de regalos es de Amazon USA.</p>
+		<a class="button" href="https://www.amazon.com/wedding/share/arnulfoycaissa" target="_blank">Ver mesa de regalos</a>
 	</section>
 	<section class="giftlist_cardTransfer">
 		<section class="giftlist_cardTransfer__information">
 			<h3>Apoyo en efectivo</h3>
-			<p>Si lo prefieres, puedes darnos un apoyo en efectivo haciendo una transferencia a una de estas cuentas:</p>
+			<p>Si lo prefieres, puedes darnos un apoyo en efectivo haciendo una transferencia a una de estas cuentas.</p>
+			<p>Pon tu nombre el asunto para saber que el regalo viene de tu parte.</p>
 		</section>
 		<table class="table table_caissa">
 			<thead>
