--- a/src/components/Reception/Reception.astro
+++ b/src/components/Reception/Reception.astro
@@ -9,11 +9,14 @@ import './reception.css'
 		<h3>Salón Amaia</h3>
 		<p>Nogal 101, Aguila, CP 89320</p>
 		<p>Tampico, Tamaulipas, MX</p>
+		<p class="small">El lugar es en salón interior y cuenta con aire acondicionado. Cuenta también con estacionamiento disponible para nuestros invitados. </p>
 	</address>
 	<section class="reception_map">
 		<iframe src="https://www.google.com/maps/d/embed?mid=11y-hacTS-QmomzLW-Uo49qwlG45eFEg&ehbc=2E312F&z=14" width="100%" height="480"></iframe>
 	</section>
-	<section class="reception_info">
-		<p class="small">El lugar es en salón interior y cuenta con aire acondicionado. Cuenta también con estacionamiento disponible para nuestros invitados. </p>
+	<section class="dressing_code">
+		<h3>Regla de etiqueta:</h3>
+		<p>Mujeres: Vestido largo de gala.</p>
+		<p>Hombres: Traje y corbata.</p>
 	</section>
 </section>
