--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -7,7 +7,7 @@ import './footer.css'
 		<p class="small">Diseñado y desarrollado por:</p> 
 		<p class="small text_bold"> Caissa Palomino y Arnulfo Loredo</p>
 		<p class="small">
-			<a class="link link_dark" href="https://www.flaticon.com/free-animated-icons/flower" title="animated icons">Animated icons created by Freepik - Flaticon</a>
+			<a class="link link_dark" href="https://www.flaticon.com/free-animated-icons/flower" title="animated icons" target="_blank">Animated icons created by Freepik - Flaticon</a>
 		</p>
 		<p class="small">Copyright <span class="">@2023</span></p>
 	</section>
