--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,6 +30,14 @@ import GiftList from '../components/GiftList/GiftList.astro';
 
 		<GoogleFontsOptimizer url="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap">
     	</GoogleFontsOptimizer>
+		<script src="https://t.usermaven.com/lib.js" 
+			data-key="UMLxqQaxkR" 
+			data-tracking-host="https://events.usermaven.com"
+			data-autocapture="true"  
+			data-privacy-policy="strict" 
+			defer>
+		</script>
+		<script>window.usermaven = window.usermaven || (function(){(window.usermavenQ = window.usermavenQ || []).push(arguments);})</script>
 	</head>
 	<body>
 		<section>
