--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -14,7 +14,7 @@ import './hero.css'
 			<p class="save_the_date">Domingo <span class="text_bold">19</span> <span class="text_bold">Noviembre</span></p>
 		</section>
 		<picture class="hero_image">
-			<video class="hero_image__front" src="/videos/ring.mp4" poster="/images/arch.gif" autoplay loop muted playsinline preload="auto"></video>
+			<video class="hero_image__front" src="/videos/ring.mp4" poster="/images/ring.gif" autoplay loop muted playsinline preload="auto"></video>
 			<img class="hero_image__back" src="https://live.staticflickr.com/65535/52815852952_65c9fc4d7c_w_d.jpg" alt="">
 		</picture>
 		<Timer client:only="react" />
