--- a/src/components/Timer/timer.css
+++ b/src/components/Timer/timer.css
@@ -16,8 +16,8 @@
 
 @media screen and (max-width: 400px) {
 	.timer {
-		flex-direction: column;
-		align-items: center;
+		gap: 0.4rem;
+		padding: 0.8rem;
 	}
 
 	.date_colons {
