Centerd main ring and headings in mobile view. Fixed document lang attribute.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Confirmation from '../components/Confirmation/Confirmation.astro';
 import GiftList from '../components/GiftList/GiftList.astro';
 ---
 
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
@@ -41,7 +41,7 @@ import GiftList from '../components/GiftList/GiftList.astro';
 		<script is:inline>window.usermaven = window.usermaven || (function(){(window.usermavenQ = window.usermavenQ || []).push(arguments);})</script>
 	</head>
 	<body>
-		<section>
+		<main>
 			<Hero />
 
 			<Reception />
@@ -51,6 +51,6 @@ import GiftList from '../components/GiftList/GiftList.astro';
 			<Gallery />
 
 			<Footer />
-		</section>
+		</main>
 	</body>
 </html>
