Upgrated to Astro V3 and updated info

--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -12,6 +12,7 @@ import './hero.css'
 	<section class="hero_date container">
 		<section class="hero_date_text">
 			<p class="save_the_date">Domingo <span class="text_bold">19</span> <span class="text_bold">Noviembre</span></p>
+			<p class="save_the_date">5:30pm</p>
 		</section>
 		<picture class="hero_image">
 			<video class="hero_image__front" src="/videos/ring.mp4" poster="/images/ring.gif" autoplay loop muted playsinline preload="auto"></video>
