--- a/src/components/Reception/Reception.astro
+++ b/src/components/Reception/Reception.astro
@@ -16,7 +16,7 @@ import './reception.css'
 	</section>
 	<section class="dressing_code">
 		<h3>Regla de etiqueta:</h3>
-		<p>Mujeres: Vestido largo de gala.</p>
+		<p>Mujeres: Vestido largo.</p>
 		<p>Hombres: Traje y corbata.</p>
 	</section>
 </section>
