--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import './index.css'
 import { GoogleFontsOptimizer } from "astro-google-fonts-optimizer";
 import Hero from '../components/Hero/Hero.astro';
 import Reception from '../components/Reception/Reception.astro';
+import Horarios from '../components/Horarios/Horarios.astro';
 import Story from '../components/Story/Story.astro';
 import Gallery from '../components/Gallery/Gallery.astro';
 import Footer from '../components/Footer/Footer.astro';
@@ -45,6 +46,7 @@ import GiftList from '../components/GiftList/GiftList.astro';
 			<Hero />
 
 			<Reception />
+			<Horarios />
 			<Story />
 			<Confirmation />
 			<GiftList />
