--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Horarios from '../components/Horarios/Horarios.astro';
 import Story from '../components/Story/Story.astro';
 import Gallery from '../components/Gallery/Gallery.astro';
 import Footer from '../components/Footer/Footer.astro';
-import Confirmation from '../components/Confirmation/Confirmation.astro';
+// import Confirmation from '../components/Confirmation/Confirmation.astro';
 import GiftList from '../components/GiftList/GiftList.astro';
 ---
 
@@ -48,7 +48,7 @@ import GiftList from '../components/GiftList/GiftList.astro';
 			<Reception />
 			<Horarios />
 			<Story />
-			<Confirmation />
+			<!-- <Confirmation /> -->
 			<GiftList />
 			<Gallery />
 
