Upgraded React to v19

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import './reset.css'
-import './index.css'
+import './_reset.css'
+import './_index.css'
 
 import { GoogleFontsOptimizer } from "astro-google-fonts-optimizer";
 import Hero from '../components/Hero/Hero.astro';
