--- a/src/pages/types.astro
+++ b/src/pages/types.astro
@@ -1,6 +1,6 @@
 ---
-import './reset.css'
-import './index.css'
+import './_reset.css'
+import './_index.css'
 
 import { GoogleFontsOptimizer } from "astro-google-fonts-optimizer";
 import Typography from '../components/Typography/Typography.astro';
