Updated content for new invitation

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -5,10 +5,10 @@ import './footer.css'
 <footer class="footer">
 	<section class="container">
 		<p class="small">Diseñado y desarrollado por:</p> 
-		<p class="small text_bold"> Caissa Palomino y Arnulfo Loredo</p>
+		<p class="small text_bold"><a class="link link_dark" href="https://arnulfo.dev">Arnulfo Loredo</a></p>
 		<p class="small">
 			<a class="link link_dark" href="https://www.flaticon.com/free-animated-icons/flower" title="animated icons" target="_blank">Animated icons created by Freepik - Flaticon</a>
 		</p>
-		<p class="small">Copyright <span class="">@2023</span></p>
+		<p class="small">Copyright <span class="">@2025</span></p>
 	</section>
 </footer>
