--- a/src/components/GiftList/GiftList.astro
+++ b/src/components/GiftList/GiftList.astro
@@ -23,7 +23,7 @@ import './giftlist.css'
 			<thead>
 				<tr>
 					<th>Nombre</th>
-					<th>Caissa Giselle Palomino Galván</th>
+					<th>Daniel</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -45,7 +45,7 @@ import './giftlist.css'
 			<thead>
 				<tr>
 					<th>Nombre</th>
-					<th>Arnulfo Daniel Loredo Gallardo</th>
+					<th>Oyuky</th>
 				</tr>
 			</thead>
 			<tbody>
