--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Horarios from '../components/Horarios/Horarios.astro';
 import Story from '../components/Story/Story.astro';
 import Gallery from '../components/Gallery/Gallery.astro';
 import Footer from '../components/Footer/Footer.astro';
-// import Confirmation from '../components/Confirmation/Confirmation.astro';
+import Confirmation from '../components/Confirmation/Confirmation.astro';
 import GiftList from '../components/GiftList/GiftList.astro';
 ---
 
@@ -19,16 +19,16 @@ import GiftList from '../components/GiftList/GiftList.astro';
 		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Arnulfo y Caissa</title>
+		<title>Oyuky y Daniel</title>
 
 		<!-- OPEN GRAPH / LINK PREVIEW -->
 
-		<meta property="og:title" content="Arnulfo y Caissa" />
+		<meta property="og:title" content="Oyuky y Daniel" />
 		<meta property="og:description" content="!Estás invitado a nuestra boda!" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://arnulfoycaissa.com" />
 		<meta property="og:image" content="https://live.staticflickr.com/65535/52935447212_a000094695_b_d.jpg" />
-		<meta property="og:image:alt" content="Arnulfo y Caissa tomados de la mano frente al atardecer" />
+		<meta property="og:image:alt" content="Oyuky y Daniel tomados de la mano frente al atardecer" />
 
 		<GoogleFontsOptimizer url="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap">
     	</GoogleFontsOptimizer>
@@ -48,7 +48,7 @@ import GiftList from '../components/GiftList/GiftList.astro';
 			<Reception />
 			<Horarios />
 			<Story />
-			<!-- <Confirmation /> -->
+			<Confirmation />
 			<GiftList />
 			<Gallery />
 
