Updated image paths

--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -16,7 +16,7 @@ import './hero.css'
 		</section>
 		<picture class="hero_image">
 			<video class="hero_image__front" src="/videos/ring.mp4" poster="/icons/ring.gif" autoplay loop muted playsinline preload="auto"></video>
-			<img class="hero_image__back" src="https://live.staticflickr.com/65535/52815852952_65c9fc4d7c_w_d.jpg" alt="">
+			<img class="hero_image__back" src="images/hero.jpeg" alt="">
 		</picture>
 		<Timer client:only="react" />
 	</section>
