--- a/src/components/Reception/Reception.astro
+++ b/src/components/Reception/Reception.astro
@@ -17,6 +17,10 @@ import './reception.css'
 	<section class="dressing_code">
 		<h3>Regla de etiqueta:</h3>
 		<p>Mujeres: Vestido largo. Prohibido vestir color rojo, blanco, negro y plata; eviten negar acceso.</p>
-		<p>Hombres: Traje y corbata.</p>
+		<p>Hombres: Vestimenta Formal.</p>
+	</section>
+	<section class="dressing_code">
+		<h3>Cordinadora</h3>
+		<p>Lourdes Loo</p>
 	</section>
 </section>
