--- a/src/components/GiftList/GiftList.astro
+++ b/src/components/GiftList/GiftList.astro
@@ -9,60 +9,9 @@ import './giftlist.css'
 		<p>Contar con su presencia este día tan especial sería para nosotros el mejor regalo. Pero si además desean regalarnos algo, les dejamos estas sugerencias:</p>
 	</section>
 	<section class="giftlist_amazon">
-		<h3>Mesa de Regalos de Amazon</h3>
-		<p>Puedes elegir un regalo de nuestra lista o crear un certificado de regalo por la cantidad que gustes. La mesa de regalos es de Amazon USA.</p>
-		<a class="button" href="https://www.amazon.com/wedding/share/arnulfoycaissa" target="_blank">Ver mesa de regalos</a>
-	</section>
-	<section class="giftlist_cardTransfer">
-		<section class="giftlist_cardTransfer__information">
-			<h3>Apoyo en efectivo</h3>
-			<p>Si lo prefieres, puedes darnos un apoyo en efectivo haciendo una transferencia a una de estas cuentas.</p>
-			<p>Pon tu nombre el asunto para saber que el regalo viene de tu parte.</p>
-		</section>
-		<table class="table table_caissa">
-			<thead>
-				<tr>
-					<th>Nombre</th>
-					<th>Daniel</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>Banco</td>
-					<td>Santander</td>
-				</tr>
-				<tr>
-					<td>Cuenta CLABE</td>
-					<td>014813606049539245</td>
-				</tr>
-				<tr>
-					<td>Número de tarjeta</td>
-					<td>5579 0701 0429 4510</td>
-				</tr>
-			</tbody>
-		</table>
-		<table class="table table_arnulfo">
-			<thead>
-				<tr>
-					<th>Nombre</th>
-					<th>Oyuky</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>Banco</td>
-					<td>Citibanamex</td>
-				</tr>
-				<tr>
-					<td>Cuenta CLABE</td>
-					<td>002580701003805346</td>
-				</tr>
-				<tr>
-					<td>Número de tarjeta</td>
-					<td>5204 1654 3339 4693</td>
-				</tr>
-			</tbody>
-		</table>
+		<h3>Mesa de Regalos de Liverpool</h3>
+		<p>Puedes elegir un regalo de nuestra lista.</p>
+		<a class="button" href="https://mesaderegalos.liverpool.com.mx/" target="_blank">Ver mesa de regalos</a>
 	</section>
 	
 </section>
