--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-	background-color: var(--main-color);
+	background-color: var(--accent-color);
 	text-align: center;
 	padding: 2rem 0;
 }
