--- a/src/components/Reception/Reception.astro
+++ b/src/components/Reception/Reception.astro
@@ -12,7 +12,7 @@ import './reception.css'
 		<!-- <p class="small">El lugar es en salón interior y cuenta con aire acondicionado. Cuenta también con estacionamiento disponible para nuestros invitados. </p> -->
 	</address>
 	<section class="reception_map">
-		<iframe src="https://www.google.com/maps/d/embed?mid=11y-hacTS-QmomzLW-Uo49qwlG45eFEg&ehbc=2E312F&z=14" width="100%" height="480"></iframe>
+		<iframe src="https://www.google.com/maps/d/embed?mid=1zyiDVdwWATuSM5wU5sgX6gBsk9nkF18&ehbc=2E312F" width="100%" height="480"></iframe>
 	</section>
 	<section class="dressing_code">
 		<h3>Regla de etiqueta:</h3>
